# SimpReactor

./: .gitignore  LICENSE  README.md  pyproject.toml
.jules/: scribe.md
docs/: SPEC-1-Hybrid-Reactor-Modeling-Workbench.md
src/simpreactor/: __init__.py  cli.py  constants.py  kinetics.py  models.py  reactors.py
src/simpreactor/gui/: __init__.py  app.py  simulation.py
src/simpreactor/persistence/: __init__.py  sqlite_store.py
src/simpreactor/thermo/: __init__.py  base.py  ideal.py
tests/: test_kinetics.py  test_reactors.py
