[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpreactor"
version = "0.1.0"
description = "Hybrid reactor modeling workbench (MVP skeleton)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SimpReactor Contributors" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "typer>=0.12",
]

[project.scripts]
simpreactor = "simpreactor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
